--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@ button:hover {
 
 </style>
 <body>
-<form>
+<form action="connect.php" method="POST">
 <div class="formContainer">
     <h1>WELCOME :)</h1>
 <h1>Sign Up Form</h1>
@@ -70,8 +70,8 @@ button:hover {
 <input type="text" placeholder="Enter Email" name="email" required>
 <label for="password"><b>Password</b></label>
 <input type="password" placeholder="Enter Password" name="password" required>
-<label for="repeatPassword"><b>Repeat Password</b></label>
-<input type="password" placeholder="Repeat Password" name="repeatPassword"
+<label for="repeatpassword"><b>Repeat Password</b></label>
+<input type="password" placeholder="Repeat Password" name="repeatpassword"
 required>
 <label>
 <input type="checkbox" checked="checked" name="remember" style="marginbottom: 15px"> Remember me
