--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body{
-    background-image: url('shop1.jpg');
+    background-image: url('shop3.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -12,31 +12,33 @@ body{
 * {box-sizing: border-box}
 input[type=text], input[type=password] {
    width: 100%;
-   font-size: 28px;
+   font-size: 15px;
    padding: 15px;
    margin: 5px 0 22px 0;
    display: inline-block;
    border: none;
    background-color: #00000028;
+   
+}
 
    
 }
 label{
-   font-size: 15px;
+   font-size: 10px;
 }
 input[type=text]:focus, input[type=password]:focus {
-   background-color: #ddd;
+   background-color: rgba(221, 221, 221, 0.103);
    outline: none;
 }
 hr {
-   border: 1px solid #f1f1f1;
+   border: 1px solid #f1f1f109;
    margin-bottom: 25px;
 }
 button {
-   font-size: 18px;
+   font-size: 14px;
    font-weight: bold;
    background-color: rgb(10, 119, 13);
-   color: white;
+   color: rgb(255, 255, 255);
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
@@ -52,16 +54,27 @@ button:hover {
    background-color: #1d77dd;
 }
 .formContainer {
-   padding: 16px;
+   padding: 10px;
 }
 .formContainer p{
-   font-size: 28px;
+   font-size: 20px;
 }
+.container {
+  position: relative;
+  right: 0;
+  margin: 30px;
+  max-width: 400px;
+  padding: 25px;
+  background-color: rgba(38, 128, 212, 0);
+  background: #f1f1f1;
+}
+
+
 
 
 </style>
 <body>
-<form action="connect.php" method="POST">
+<form action="connect.php" method="POST" class="container">
 <div class="formContainer">
     <h1>WELCOME :)</h1>
 <h1>Sign Up Form</h1>
@@ -74,12 +87,11 @@ button:hover {
 <input type="password" placeholder="Repeat Password" name="repeatpassword"
 required>
 <label>
-<input type="checkbox" checked="checked" name="remember" style="marginbottom: 15px"> Remember me
+<input type="checkbox" checked="checked" name="remember" style="marginbottom: 5px"> Remember me
 </label>
 <p>By creating an account you agree to our <a href="#"
 style="color:dodgerblue">Terms & Privacy</a><p>
 <div>
-<button type="button" class="cancel">Cancel</button>
 <button type="submit" class="signup">Sign Up</button>
 </div>
 </div>
