--- a/watches.html
+++ b/watches.html
@@ -1,185 +1,99 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>Products page</title>
-    </head>
-    <body>
-        <h2 align="center">WATCHES FOR MEN WOMEN AND CHILDREN</h2> 
-        <table align="center" cellspacing="40" cellpadding="10">
-            <tr align="center">
-                <td>
-                    <img src="pro1.jpg" width="150" height="230"> <br>
-                    <b>VERSACE</b><br>
-                    <p></p>Analog Black Dial Watches for Men<br>
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9733;:<br>
-                    Price: $50<br>
-                    <button>Add to Cart</button>
+<head>
+<style>
+body{
+    background-image: url('shop5.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+* {box-sizing: border-box}
+input[type=text], input[type=password] {
+   width: 100%;
+   font-size: 15px;
+   padding: 15px;
+   margin: 5px 0 22px 0;
+   display: inline-block;
+   border: none;
+   background-color: #00000028;
+   
+}
+
+   
+}
+label{
+   font-size: 10px;
+}
+input[type=text]:focus, input[type=password]:focus {
+   background-color: rgba(221, 221, 221, 0.103);
+   outline: none;
+}
+hr {
+   border: 1px solid #f1f1f109;
+   margin-bottom: 25px;
+}
+button {
+   font-size: 14px;
+   font-weight: bold;
+   background-color: rgb(10, 119, 13);
+   color: rgb(255, 255, 255);
+   padding: 14px 20px;
+   margin: 8px 0;
+   border: none;
+   cursor: pointer;
+   width: 100%;
+   opacity: 0.9;
+}
+button:hover {
+   opacity:1;
+}
+.cancel {
+   padding: 14px 20px;
+   background-color: #1d77dd;
+}
+.formContainer {
+   padding: 10px;
+}
+.formContainer p{
+   font-size: 20px;
+}
+.container {
+  position: absolute;
+  right: 0;
+  margin: 30px;
+  max-width: 400px;
+  padding: 25px;
+  background-color: rgba(38, 128, 212, 0);
+  background: #f1f1f1;
+}
 
 
-                </td>
-                <td>
-                    <img src="pro2.jpg" width="200" height="230"><br>
-                    <b>BIDEN</b><br>
-                    Analog BLack Dial Watches for Men<br>
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9734;
-                    &#9734;<br>
-                    Price: $35<br>
-                    <button>Add to Cart</button>
 
 
-                </td>
-                <td>
-                    <img src="pro3.jpg" width="200" height="230"><br>
-                    <b>JUNKERS</b><br>
-                    Analog BLue Dial Watches for Men<br>
-                    &#9733;
-                    &#9733;
-                    &#9734;
-                    &#9734;
-                    &#9734;<br>
-                    Price: $60<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-                <td>
-                    <img src="pro4.jpg" width="200" height="230"><br>
-                    <b>TOMMY HILFIGER</b><br>
-                    Analog Blue Dial Watches for Men<br>
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9733;<br>
-                    Price: $70<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-            </tr>
-            <tr align="center">
-                <td>
-                    <img src="pro5.jpg" width="200" height="230"> <br>
-                    <b>MICHAEL KORS</b><br>
-                    <p></p>Analog White Dial Watches for Women<br>
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9733;<br>
-                    Price: $90<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-                <td>
-                    <img src="pro6.jpg" width="200" height="230"><br>
-                    <b>SAPPHIRE</b><br>
-                    Analog Silver Dial Watches for Women<br>
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9734;<br>
-                    Price: $35<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-                <td>
-                    <img src="pro7.jpg" width="200" height="230"><br>
-                    <b>FOGG</b><br>
-                    Analog Pink Dial Watches for Women<br>
-                    &#9733;
-                    &#9733;
-                    &#9734;
-                    &#9734;
-                    &#9734;<br>
-                    Price: $40<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-                <td>
-                    <img src="pro8.jpg" width="200" height="230"><br>
-                    <b>SKAGEN DENMARK</b><br>
-                    Analog Blue Watches for Women<br>
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9734;<br>
-                    Price: $20<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-            </tr>
-            <tr align="center">
-                <td>
-                    <img src="pro9.jpg" width="200" height="250"> <br>
-                    <b>BARBIE</b><br>
-                    Analog barbie Watches for Kids<br>
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9734;
-                    &#9734;<br>
-                    Price: $10<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-                <td>
-                    <img src="pro10.jpg" width="200" height="250"><br>
-                    <b>SWADESI STUFF</b><br>
-                    Analog Multicoloured Watches for Kids<br>
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9733;
-                    &#9734;<br>
-                    Price: $20<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-                <td>
-                    <img src="pro11.jpg" width="200" height="250"><br>
-                    <b>SPIDERMAN</b><br>
-                    Digital Red spiderman Watches for Kids<br>
-                    &#9733;
-                    &#9733;
-                    &#9734;
-                    &#9734;
-                    &#9734;<br>
-                    Price: $25<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-                <td>
-                    <img src="pro12.jpg" width="200" height="270"><br>
-                    <b>NUBELA</b><br>
-                    Quartz Analog pink Watches for Kids<br>
-                    &#9733;
-                    &#9733;
-                    &#9734;
-                    &#9734;
-                    &#9734;<br>
-                    Price: $15<br>
-                    <button>Add to Cart</button>
-
-
-                </td>
-            </tr>
-        </table>
-    </body>
+</style>
+<body>
+<form action="connect.php" method="POST" class="container">
+<div class="formContainer">
+    <h1>WELCOME :)</h1>
+<h1>Sign Up Form</h1>
+<hr>
+<label for="email"><b>Email</b></label>
+<input type="text" placeholder="Enter Email" name="email" required>
+<label for="password"><b>Password</b></label>
+<input type="password" placeholder="Enter Password" name="password" required>
+<label for="repeatpassword"><b>Repeat Password</b></label>
+<input type="password" placeholder="Repeat Password" name="repeatpassword"
+required>
+<label>
+<input type="checkbox" checked="checked" name="remember" style="marginbottom: 5px"> Remember me
+</label>
+<p>By creating an account you agree to our <a href="#"
+style="color:dodgerblue">Terms & Privacy</a><p>
+<div>
+<button type="submit" class="signup">Sign Up</button>
+</div>
+</div>
+</form>
+</body>
 </html>
