--- a/signup.html
+++ b/signup.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html>
 <head>
 <style>
 body{
-    background-image: url('shop3.jpg');
+    background-image: url('shop5.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -60,7 +59,7 @@ button:hover {
    font-size: 20px;
 }
 .container {
-  position: relative;
+  position: absolute;
   right: 0;
   margin: 30px;
   max-width: 400px;
